<resources>
    <string name="app_name">La taverne au jeu</string>
    <string name="main_image_description">main image</string>
    <string name="green_button_text">One Phone Game</string>
    <string name="gray_button_text">Multi Phone Game</string>
    <string name="back_button_desc">Back</string>
    <string name="button1_desc">Button 1</string>
    <string name="button2_desc">Button 2</string>
    <string name="settings_button_description">Settings Button</string>
    <string name="account">Account Information</string>
    <string name="global_score">Global Score: </string>
    <string name="select_language">Select Language</string>
    <string name="volume_level">Volume Level</string>
    <string name="triMannGame">Tri Mann</string>
    <string name="triMannGameDescription">Tri-mann is a dice game where players compete by rolling a set of dice and trying to get specific combinations to score points. Each player has a limited number of rolls and must strategically decide which dice faces to keep to maximize their score. The game requires both luck and strategic thinking to optimize decisions each turn.</string>
    <string name="course_e_pic">Course e pic</string>
    <string name="course_e_pic_description">Course E-Pic Game Description</string>
    <string name="et_boom">Et Boom!</string>
    <string name="et_boom_description">In Et Boom!, each player must say a word starting with a given letter before the bomb explodes. Think fast and speak clearly, or you\'ll lose time and the tension will rise! The last remaining player wins the game.</string>
    <string name="quit">Quit</string>
    <string name="game_rules">Game Rules</string>
    <string name="settings">Settings</string>
    <string name="PartyGameName">Party Game</string>
    <string name="startGame">Start</string>
    <string name="playerName">Player Name</string>
    <string name="history_game">History Game</string>
    <string name="language">Language</string>
    <string name="gamechoose">Choose Game</string>
    <!-- TriMann Game Strings -->
    <string name="game_started">Game started</string>
    <string name="roll_dice">Roll dice</string>
    <string name="dice_result">Dice result: %d</string>
    <string name="triman_player">Triman: %s</string>
    <string name="player_turn">%s\'s turn</string>
    <string name="player_score">%s: %d</string>
    <string name="start_game">Start game</string>
    <string name="end_game">End game</string>
    <string name="player_list">Player list:</string>
    <string name="validate_distribution">Validate distribution</string>
    <string name="designate">Designate</string>
    <string name="shifoumi_players">Players selected for shifoumi: %s</string>
    <string name="designate_loser">Designate loser</string>

    <!-- Roll Result Messages -->
    <string name="double_even_roll">%s rolled a double %d, they distribute %d points!</string>
    <string name="tri_result">Tri! %s gets 2 points</string>
    <string name="previous_player_points">%s gets 2 points</string>
    <string name="next_player_points">%s gets 2 points</string>
    <string name="double_odd_roll">%s gets %d points (odd double)!</string>
    <string name="double_six">Double 6, choose two players for shifoumi!</string>
    <string name="place_fingers">Place %d fingers on the table</string>
    <string name="turn_ended">%s\'s turn is over, no event occurred.</string>
    <string name="web_client_id">487223276550-1mfc4i8gcee1t3f1s6pvg4p4cqu34kh5.apps.googleusercontent.com</string>
    <string name="volume">Volume</string>

    <!-- Variable for the Bleiz Garou game -->
    <string name="bleiz_garou">Bleiz-garou</string>
    <string name="bleiz_garou_Description">In this game, you and your friends are trapped in a village haunted by terrifying creatures. Each night, howls echo through the dark, and by morning, someone is missing. The goal? Survive, expose the liars, and eliminate the werewolves… before they feast on you.</string>
    <string name="bleiz_garou_rules">Bleiz Garou Game Rules</string>
    <string name="bleiz_garou_role_werewolf">Werewolf</string>
    <string name="bleiz_garou_role_seer">Seer</string>
    <string name="bleiz_garou_role_witch">Witch</string>
    <string name="bleiz_garou_role_villager">Villager</string>
    <string name="bleiz_garou_role_hunter">Hunter</string>
    <string name="bleiz_garou_role_little_girl">Little Girl</string>
    <string name="bleiz_garou_role_cupid">Cupid</string>
    <string name="bleiz_garou_role_lover">Lovers</string>
    <string name="bleiz_garou_role_thief">Thief</string>
    <string name="bleiz_garou_winner_message_lovers">💖 Lovers’ Victory!</string>
    <string name="bleiz_garou_winner_message_werewolves">🐺 Werewolves’ Victory!</string>
    <string name="bleiz_garou_winner_message_villager">🏡 Villagers’ Victory!</string>
    <string name="bleiz_garou_pass_the_phone_to">📱 Pass the phone to %1$s</string>
    <string name="bleiz_garou_next_player">Next Player</string>
    <string-array name="bleiz_garou_night_phase_step">
        <item>%1$s night : Everyone close your eyes.</item>
        <item>🃏 The Thief wakes up and sees the two hidden cards.</item>
        <item>😴 The Thief goes back to sleep.</item>
        <item>💘 Cupid wakes up and selects two players as lovers.</item>
        <item>😴 Cupid goes back to sleep.</item>
        <item>🔮 The Seer wakes up and looks at a player’s card.</item>
        <item>😴 The Seer goes back to sleep.</item>
        <item>💏 The Lovers wake up and recognize each other.</item>
        <item>😴 The Lovers go back to sleep.</item>
        <item>🐺 The Werewolves wake up and choose a victim.</item>
        <item>😴 The Werewolves go back to sleep.</item>
        <item>🧙‍♀️ The Witch wakes up and sees the Werewolves’ victim.</item>
        <item>😴 The Witch goes back to sleep.</item>
        <item>🌄 The Village wakes up and discovers the victim!</item>
    </string-array>
    <string name="bleiz_garou_start_day">Start the Day</string>
    <string name="bleiz_garou_next">Next ⏩</string>
    <string-array name="bleiz_garou_day_phase_step">
        <item>🌞 The village wakes up</item>
        <item>🗣 Debate about the suspects</item>
        <item>⚖️ Vote to eliminate a player</item>
        <item>⚠️ Daytime results</item>
    </string-array>
    <string name="bleiz_garou_night_results_victims_are">The night’s victims are:</string>
    <string name="bleiz_garou_night_results_no_victims">🎉 No one was eliminated tonight!</string>
    <string name="bleiz_garou_night_results_go_debate">Proceed to Debate</string>
    <string name="bleiz_garou_debate_phase">Players discuss to find the Werewolves…</string>
    <string name="bleiz_garou_debate_phase_go_vote">Proceed to Vote</string>
    <string name="bleiz_garou_voting_phase_confirm">Confirm Vote</string>
    <string name="bleiz_garou_vote_result">🚨 %1$s has been eliminated!</string>
    <string name="bleiz_garou_vote_result_he_was">They were %1$s</string>
    <string name="bleiz_garou_vote_result_go_to_night">Proceed to Night 🌙</string>
    <string name="bleiz_garou_vote_result_tied">⚖️ Tie between: %1$s</string>
    <string name="bleiz_garou_vote_result_revote_needed">A revote is needed to break the tie.</string>
    <string name="bleiz_garou_vote_result_revote">Revote 🗳️</string>
    <string name="bleiz_garou_vote_result_no_eliminated">⚖️ No one was eliminated today!</string>
    <string name="bleiz_garou_thief_choice">🃏 You are the Thief. Choose a card or keep yours.</string>
    <string name="bleiz_garou_thief_choice_keep_card">Keep my card (Villager)</string>
    <string name="bleiz_garou_thief_choice_confirm">Confirm Choice</string>
    <string name="bleiz_garou_cupid_choice">💘 Cupid, select two players to become lovers.</string>
    <string name="bleiz_garou_cupid_choice_confirm">Confirm Couple</string>
    <string name="bleiz_garou_werewolves_choice">🐺 The Werewolves choose a victim.</string>
    <string name="bleiz_garou_werewolves_choice_confirm">Confirm Victim</string>
    <string name="bleiz_garou_witch_choice">🧙‍♀️ Witch, do you want to use a potion?</string>
    <string name="bleiz_garou_witch_choice_attacked_player">❗ %1$s was attacked tonight!</string>
    <string name="bleiz_garou_witch_choice_use_heal">💊 Use the healing potion on %1$s</string>
    <string name="bleiz_garou_witch_choice_already_used_heal">🚫 Healing potion already used</string>
    <string name="bleiz_garou_witch_choice_use_poison">☠️ Use the poison potion</string>
    <string name="bleiz_garou_witch_choice_already_used_poison">🚫 Poison potion already used</string>
    <string name="bleiz_garou_witch_choice_do_nothing">🚫 Do nothing</string>
    <string name="bleiz_garou_witch_choice_choose_player">Choose a player to eliminate:</string>
    <string name="bleiz_garou_witch_choice_confirm_kill">Confirm elimination of %1$s</string>
    <string name="bleiz_garou_witch_choice_confirm_heal">Confirm saving %1$s</string>
    <string name="bleiz_garou_seer_choice">🔮 Seer, choose a player to observe.</string>
    <string name="bleiz_garou_seer_choice_reveal">🔮 %1$s’s card: %2$s</string>
    <string name="bleiz_garou_hunter_choice">🎯 The Hunter must eliminate a player</string>
    <string name="bleiz_garou_hunter_choice_confirm">Confirm Elimination</string>
    <string name="bleiz_garou_hunter_kill">🔫 The Hunter has killed: %1$s</string>
    <string name="bleiz_garou_hunter_kill_he_was">🎭 Their role was: %1$s</string>

    <string name="connectGoogle"> Connect to Google </string>


    <string name="permission_required_title">Permission Required</string>
    <string name="permission_required_message">This game requires microphone permission to function.</string>
    <string name="allow">Granted</string>
    <string name="cancel">Cancel</string>
    <string name="game_needs_microphone">This game needs microphone permission to function.</string>
    <string name="request_permission">Ask for permission</string>
    <string name="eliminated_player">Player %1$s has been eliminated!</string>
    <string name="starting_player">"Starting player: %1$s</string>
    <string name="game_starts_in">"Game starts in %1$d seconds</string>
    <string name="find_word_starting_with">Find a word starting with the letter %1$s</string>
    <string name="you_said">You said: %1$s</string>
    <string name="correct_word">✅ Correct word!</string>
    <string name="wrong_word">❌ Wrong word! Try again.</string>
    <string name="speak"> 🎤  Speak</string>


</resources>