<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_keyboard_backspace_24"
            android:contentDescription="@string/back_button_desc"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <ImageButton
                android:id="@+id/history"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/trophee"
                android:contentDescription="@string/button1_desc"
                android:background="?attr/selectableItemBackgroundBorderless"
                />

            <ImageButton
                android:id="@+id/account"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/baseline_person_24"
                android:contentDescription="@string/button2_desc"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </LinearLayout>
    </LinearLayout>
</layout>