<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Declare any variables or imports here if needed -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameChoose">

<!--         Include the desired banner version -->
        <include
            android:id="@+id/top_banner"
            layout="@layout/banner_version1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textSize="24sp"
            android:padding="16dp"
            android:background="@drawable/common_google_signin_btn_icon_dark"
            app:layout_constraintTop_toBottomOf="@id/top_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Grid of buttons -->
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/game_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/triMannGame"
                android:layout_row="0"
                android:layout_column="0"/>

            <Button
                android:id="@+id/game_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bleiz_garou"
                android:layout_row="0"
                android:layout_column="1"/>

            <Button
                android:id="@+id/game_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_e_pic"
                android:layout_row="1"
                android:layout_column="0"/>

            <Button
                android:id="@+id/game_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/et_boom"
                android:layout_row="1"
                android:layout_column="1"/>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>